--- a/style/style.css
+++ b/style/style.css
@@ -12,39 +12,161 @@ body {
 .global {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 10000px;
     margin: 0;
     padding: 0;
     
 }
 
 [class="caja"] {
-    display: flex;
     position: absolute;
     
 }
 
+.sesion-inicio {
+    position: relative;
+    outline: 1px solid red;
+    width: 100%;
+    height: 625px;
+}
+
 .caja1 {
+    position: absolute;
     outline: 1px solid black;
     background-color: rgb(236, 138, 203);
     height: 360px;
+    width: 100%;
+    z-index: 1;
 }
 
 .img1 {
     margin-left: 307px;
     margin-top: 10px;
     width: 75px;
+    position: absolute;
+    z-index: 4;
 }
 
 .img2 {
-    margin-left: 30px;
-    margin-top: 10px;
-    width: 150px;
+    margin-left: 65px;
+    margin-top: 185px;
+    width: 259px;
+    height: 380px;
+    border-radius: 126px;
+    outline: 1px solid black;
+    position: absolute;
+    z-index: 2;
+}
+
+.estrella {
+    margin-left: 17px;
+    margin-top: 224px;
+    width: 38px;
+    height: 38px;
+    position: absolute;
+    z-index: 3;
+    
+}
+
+.estrella1 {
+    margin-left: 344px;
+    margin-top: 272px;
+    width: 23px;
+    height: 24px;
+    position: absolute;
+    z-index: 5;
+    
+}
+
+.estrella2 {
+    margin-left: 33px;
+    margin-top: 117px;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    z-index: 6;
+    
+}
+
+.logo {
+    margin-left: 25px;
+    margin-top: 485px;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    z-index: 7;
+}
+        
+
+
+.linea {
+    margin-left: 310px;
+    margin-top: 208px;
+    width: 67px;
+    height: 30px;
+    position: absolute;
+    z-index: 8;
+        
 }
 .caja2 {
+    
     background-color: rgb(231, 255, 98);
-    height: 800px;
+    height: 625px;
+    width: 100%;
+    position: absolute;
+    z-index: 0;
 }
+
+.seccion-nosotros {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: rgb(231, 255, 98);
+    height: 625px;
+    z-index: 0;
+}
+
+.lunas {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px 10px;
+    
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
