--- a/style/style.css
+++ b/style/style.css
@@ -169,63 +169,146 @@ body {
 /* seccion nosotros */
 
 .seccion-nosotros {
+    position: relative;
     overflow: hidden;
-    margin: 0;
-    padding: 0;
     width: 100%;
     background-color: rgb(231, 255, 98);
     outline: 1px solid blue;
-    height: 1000px;
+    height: 1030px;
     z-index: 0;
 }
 
 .lunas {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     padding: 10px 10px;
+    
+}
+
+.medialuna1 {
+    margin-left: 275px;
 }
 
 .text3 {
-    font-family: "Anybody", sans-serif;
+    font-family: "Gulfs Display", sans-serif;
     color: rgb(231, 255, 98);
     -webkit-text-stroke: 3px #0061ff;
     position: absolute;
     z-index: 9;
-    margin-top: 62px;
-    margin-left: 45px;
+    margin-top: 82px;
+    margin-left: 50px;
     font-size: 80px;
+    letter-spacing: 2px; /* Ajusta este valor según lo necesites */
     
 } 
 
 .text4 {
-    font-family: "Anybody", sans-serif;
+    font-family: "Gulfs Display", sans-serif;
     color: rgb(231, 255, 98);
     position: absolute;
     z-index: 9;
-    margin-top: 125px;
-    margin-left: 45px;
+    margin-top: 150px;
+    margin-left: 50px;
     font-size: 80px;
     -webkit-text-stroke: 3px #0061ff;
-
+    letter-spacing: 2px; /* Ajusta este valor según lo necesites */
 } 
 
 .p1 {
     font-family: "Anybody", sans-serif;
     position: absolute;
-    margin-top: 216px;
+    margin-top: 256px;
     margin-left: 45px;
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 600;
-    width: calc(450px - 150px);
+    width: calc(434px - 150px);
     text-align: left;
+    line-height: 1.1;
     
 }
 
 
+.p2 {
+    font-family: "Gulfs Display", sans-serif;
+    position: absolute;
+    margin-top: 550px;
+    margin-left: -332px;
+    font-size: 15px;
+    font-weight: 900;
+    text-align: left;
+}
+
+.anillos {
+    position: absolute;
+    margin-top: 528px;
+    margin-left: -184px;
+    width: 70px;
+    height: 70px;
+    
+
+}
+
+.estre {
+    position: absolute;
+    margin-top: 528px;
+    margin-left: -127px;
+    width: 70px;
+    height: 70px;
+}
 
 
+.caja3 {
+    outline: 1px solid black;
+    width: 80%;
+    height: 331px;
+    margin-top: 647px;
+    margin-left: -347px;
+    background-color: rgb(250, 180, 227);
+    transform: rotate(356deg); /* Rota 45 grados */
+}
 
+.caja4 {
+    outline: 1px solid black;
+    width: 80%;
+    height: 331px;
+    margin-top: 639px;
+    margin-left: -289px;
+    background-color: rgb(250, 180, 227);
+    transform: rotate(356deg); /* Rota 45 grados */
+}
+
+.caja5 {
+    
+    box-sizing: border-box;
+    outline: 1px solid black;
+    width: 80%;
+    height: 331px;
+    margin-top: 629px;
+    margin-left: -288px;
+    background-color: white;
+    transform: rotate(356deg); /* Rota 45 grados */
+    padding: 10px 10px;
+}
+    
+
+.img3 {
+    width: 100%;
+    height: 100%;  
+}
+
+
+/* seccion galeria */
+
+
+.seccion-galeria {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    outline: 1px solid green;
+    height: 1030px;
+    z-index: 0;
+    
+}
 
 
 
